--- a/package.json
+++ b/package.json
@@ -1,36 +1,15 @@
 {
-  "name": "telebot",
+  "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "bot telegram",
-  "keywords": [
-    "bot",
-    "telegram"
-  ],
-  "license": "ISC",
-  "author": "aldi",
-  "type": "commonjs",
-  "main": "api/main.js",
+  "description": "Telegram Trading Bot",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node api/main.js",
-    "dev": "nodemon main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js"
   },
   "dependencies": {
-    "axios": "^1.12.0",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "fs": "^0.0.1-security",
-    "git": "^0.1.5",
-    "node-cron": "^3.0.3",
-    "node-fetch": "^2.7.0",
-    "node-telegram-bot-api": "^0.66.0",
+    "node-telegram-bot-api": "^0.64.0",
+    "node-fetch": "^2.6.1",
     "rss-parser": "^3.13.0",
-    "telegraf": "^4.16.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
-  "engines": {
-    "node": "16.x"
+    "node-cron": "^3.0.3"
   }
 }
