--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
     - cron: "0 13 * * 1-5"
     # Morning Message (07:00 WIB = 00:00 UTC)
     - cron: "0 0 * * 1-5"
+  workflow_dispatch: 
 
 jobs:
   run-cron:
